--- a/BackEnd/Api/Properties/launchSettings.json
+++ b/BackEnd/Api/Properties/launchSettings.json
@@ -4,27 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:30672",
-      "sslPort": 44334
+      "applicationUrl": "http://localhost:33367",
+      "sslPort": 44378
     }
   },
   "profiles": {
-    "http": {
+    "Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5264",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7106;http://localhost:5264",
+      "applicationUrl": "https://localhost:7083;http://localhost:5010",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
