Criação de Models

--- a/BackEnd/Api/appsettings.json
+++ b/BackEnd/Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WebApiDatabase": "server=localhost; database=adredencao_db; user=admin; password=@Asdf7513a"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
